--- a/ETL_Mini_Project_CStingley.ipynb
+++ b/ETL_Mini_Project_CStingley.ipynb
@@ -233,7 +233,8 @@
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
+    "crowdfunding_info_df.info()"
    ]
   },
   {
@@ -275,7 +276,8 @@
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n"
+    "# Get the crowdfunding_info_df columns.\n",
+    "crowdfunding_info_df.columns"
    ]
   },
   {
@@ -464,7 +466,9 @@
     }
    ],
    "source": [
-    "# Assign the category and subcategory values to category and subcategory columns.\n"
+    "# Assign the category and subcategory values to category and subcategory columns.\n",
+    "crowdfunding_info_df[[\"category\", \"subcategory\"]] = crowdfunding_info_df[\"category & sub-category\"].str.split(\"/\", n=2, expand=True)\n",
+    "crowdfunding_info_df.head()"
    ]
   },
   {
@@ -476,20 +480,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['food' 'music' 'technology' 'theater' 'film & video' 'publishing' 'games'\n",
-      " 'photography' 'journalism']\n",
-      "['food trucks' 'rock' 'web' 'plays' 'documentary' 'electric music' 'drama'\n",
-      " 'indie rock' 'wearables' 'nonfiction' 'animation' 'video games' 'shorts'\n",
-      " 'fiction' 'photography books' 'radio & podcasts' 'metal' 'jazz'\n",
-      " 'translations' 'television' 'mobile games' 'world music'\n",
-      " 'science fiction' 'audio']\n"
+      "['food', 'music', 'technology', 'theater', 'film & video', 'publishing', 'games', 'photography', 'journalism']\n",
+      "['food trucks', 'rock', 'web', 'plays', 'documentary', 'electric music', 'drama', 'indie rock', 'wearables', 'nonfiction', 'animation', 'video games', 'shorts', 'fiction', 'photography books', 'radio & podcasts', 'metal', 'jazz', 'translations', 'television', 'mobile games', 'world music', 'science fiction', 'audio']\n"
      ]
     }
    ],
    "source": [
     "# Get the unique categories and subcategories in separate lists.\n",
-    "\n",
-    "\n",
+    "categories = crowdfunding_info_df['category'].unique().tolist()\n",
+    "subcategories = crowdfunding_info_df['subcategory'].unique().tolist()\n",
     "print(categories)\n",
     "print(subcategories)"
    ]
@@ -553,9 +552,10 @@
    ],
    "source": [
     "# Use a list comprehension to add \"cat\" to each category_id. \n",
+    "cat_ids = [f\"cat{category_id}\" for category_id in category_ids]\n",
     "\n",
     "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
-    "\n",
+    "scat_ids = [f\"subcat{subcategory_id}\" for subcategory_id in subcategory_ids]\n",
     "    \n",
     "print(cat_ids)\n",
     "print(scat_ids)"
@@ -568,8 +568,10 @@
    "outputs": [],
    "source": [
     "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
+    "category_df = pd.DataFrame({'category_id':cat_ids, 'category':categories})\n",
     "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
+    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n",
+    "subcategory_df = pd.DataFrame({'subcategory_id':scat_ids, 'subcategory':subcategories})\n"
    ]
   },
   {
@@ -3700,7 +3702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
